--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
            <version>4.3.0_277</version>
        </dependency>
        <dependency>
+           <groupId>com.vdurmont</groupId>
+           <artifactId>emoji-java</artifactId>
+           <version>5.1.1</version>
+       </dependency>
+       <dependency>
            <groupId>com.jagrosh</groupId>
            <artifactId>jda-utilities</artifactId>
            <version>3.0.5</version>
